# bitcoin-zk-proofs

./: README.md  optimized_proof.json  test_block_916202.json  test_block_916203.json  test_block_916204.json  test_bonsai_genesis.json  test_bonsai_large.json  test_bonsai_pointing_fixed.json  test_mock.rs  test_proof.json
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: bitcoin_processor.rs  main.rs  merkle.rs  merkle_simple.rs  types.rs
methods/src/: lib.rs  types.rs
