[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
# Bitcoin and networking dependencies
bitcoin = { version = "0.32", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# Core Lane integration
alloy-primitives = { version = "1.4.0", features = ["serde"] }
